2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (trusted): Print spaces between key ids.

	* lua.cc (add_rcfile): Errors while loading a user-provided rc
	file are naughtiness, not oopses.
	
2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (commands::explain_usage): Use split_into_lines to
	do formatting of per-command usage; allow multi-line
	descriptions.
	(trusted): New command.
	* monotone.texi (Key and Cert): Document 'trusted' command.
	* tests/t_trusted.at: New test.
	* testsuite.at: Change get_revision_cert_trust to support
	t_trusted.at.  Call t_trusted.at.
	
2004-12-10  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (package_full_revision.txt): Redo Joel Rosdahl
	<joel@rosdahl.net>'s change below after it got clobbered by
	merge.

2004-12-06  Joel Rosdahl  <joel@rosdahl.net>

	* Makefile.am (package_full_revision.txt): Silence error messages
	when deducing full package revision.

2004-12-10  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (log): Synopsize optional 'file' argument, and
	describe both arguments in help description.

2004-12-09  Derek Scherger  <derek@echologic.com>

	* .mt-nonce: delete obsolete file	
	* change_set.cc (merge_deltas): add file paths in call to
	try_to_merge_files
	* commands.cc (propagate): add progress logging similar to merge
	* diff_patch.{cc,hh} (try_to_merge_files): add file paths to
	merge2 and merge3 hooks; add logging of paths before calling merge
	hooks
	* lua.{cc,hh} (hook_merge2, hook_merge3): add file paths to merge
	hooks
	* std_hooks.lua (merge2, merge3, merge2_xxdiff_cmd,
	merge3_xxdiff_cmd): pass file paths to xxdiff for use as titles
	* testsuite.at (MONOTONE_SETUP): add paths to merge2 hook

2004-12-09  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (BUILT_SOURCES_NOCLEAN): add 'S'.
	
	* netsync.cc (session): Make ticker pointers into auto_ptr's.  Add
	cert and revision tickers.
	(session::session): Initialize new tickers.