@@ -287,3 +287,4 @@ m4_include(tests/t_explicit_merge.at)
 m4_include(tests/t_ambig_update.at)
 m4_include(tests/t_checkout_options.at)
 m4_include(tests/t_trusted.at)
+m4_include(tests/t_attr.at)
