@@ -1,5 +1,10 @@
 2004-12-11  Nathaniel Smith  <njs@codesourcery.com>
 
+	* tests/t_attr.at: New test.
+	* testsuite.at: Call it.
+
+2004-12-11  Nathaniel Smith  <njs@codesourcery.com>
+
 	* commands.cc (trusted): Print spaces between key ids.
 
 	* lua.cc (add_rcfile): Errors while loading a user-provided rc
